[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*", "examples/train",
    "crates/*/examples/*",
]


[workspace.package]
version = "0.0.9"
repository = "https://github.com/crutcher/brn-nanochat"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "deny"


[workspace.dependencies]
burn = "0.20.1"
bunsen = "0.0.4"
wordchipper = { version = "0.9.1" }
wordchipper-cli-util = { version = "0.9.1" }
bimm-contracts = "0.20.1"
regex = "1.12.3"

xot = "0.31.2"
xee-xpath = "0.1.5"

num-traits = "0.2.19"
indextree = "4.8.1"
debug-ignore = "1.0.5"
indoc = "2.0.7"

# must match the version used by burn
hashbrown = { version = "0.16.1" }

paste = "1.0.9"
derive-new = "0.7.0"
humansize = "2.1.3"
arrow = "58.1.0"
clap = "4.5"
dary_heap = "0.3"
downloader = "0.2"
parquet = "58.1.0"
rand = "0.10"
shellexpand = "3.1"
tempdir = "0.3"
strum = "0.28.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
spanned_error_message = "0.1.0"

anyhow = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }

