[package]
name = "train"
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zsl-chat = { path = "../../crates/zsl-chat", version = "0.0.9" }
zsl-data-cache = { path = "../../crates/zsl-data-cache", version = "0.0.9" }
zsl-chat-data = { path = "../../crates/zsl-chat-data", version = "0.0.9" }
bunsen = { workspace = true }
bunsen-ng = { path = "../../crates/bunsen-ng", version = "0.0.9" }

num-traits = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
wordchipper = { workspace = true, features = ["client"] }
wordchipper-cli-util = { workspace = true }
burn = { workspace = true, features = ["train", "fusion", "autotune"] }
hashbrown = { workspace = true }
regex = { workspace = true }

[features]
default = ["cuda"]
cuda = ["burn/cuda"]


[lints]
workspace = true
